--- a/Block_EnginInt1.html
+++ b/Block_EnginInt1.html
@@ -43,18 +43,24 @@
 					<h3 lang-code="01104">.Naši špecialisti pracujú s rôznymi systémami:</h3>
 					<p class="enginint1-big "><strong lang-code="01105">interné projekty:</strong></p>
 					<div class="enginint1-icon-row" aria-label="Two logos" role="img">
-						<div class="enginint1-hexagon">
+						<!-- <div class="enginint1-hexagon">
 							<img src="media/Logo_Catia.png" alt="Catia logo" />
 						</div>
 						<div class="enginint1-hexagon">
+							<img src="media/Logo_3Dexperience.png" alt="SolidWorks logo" />
+						</div> -->
+						<div class="enginint1-logo-wrapper">
+							<img src="media/Logo_Catia.png" alt="Catia logo" />
+						</div>
+						<div class="enginint1-logo-wrapper">
 							<img src="media/Logo_3Dexperience.png" alt="SolidWorks logo" />
 						</div>
 					</div>
 					<p>
 						<strong class="enginint1-big " lang-code="01106">externé projekty:</strong>
-						<strong lang-code="01107">podľa požiadavky napr.:</strong>
+						<span lang-code="01107">podľa požiadavky.</span>
 					</p>
-					<div class="enginint1-icon-row" aria-label="Three logos" role="img">
+					<!-- <div class="enginint1-icon-row" aria-label="Three logos" role="img">
 						<div class="enginint1-hexagon">
 							<img src="media/Logo_SolidWorksColor.png" alt="Catia logo" />
 						</div>
@@ -64,7 +70,7 @@
 						<div class="enginint1-hexagon">
 							<img src="media/Logo_AutodeskInventor.png" alt="AutodeskInventor logo" />
 						</div>
-					</div>
+					</div> -->
 					<p>
 						<strong lang-code="01108">.Poskytujeme komplexné riešenia a individuálny prístup vo všetkých etapách vývoja</strong>
 						<span lang-code="01109"> - od konštrukčného návrhu, jeho doladenia a úprav, až po vypracovanie kompletnej výkresovej dokumentácie.</span>
