--- a/Block_EnginInt3.html
+++ b/Block_EnginInt3.html
@@ -43,13 +43,14 @@
 
 				<div class="enginint3-right">
 					<div class="enginint3-line-with-img">
-						<h3 lang-code="01301">Interná konštrukcia</h3>
+						<!-- <h3 lang-code="01301">Interná konštrukcia</h3> -->
+						 <strong lang-code="01302">Komplexné návrhy</strong>
 						<!-- <img src="media/Auticko.png" alt="Ikona auticka"> -->
 						<img src="media/IkonaObrabaciehoStroja.png" alt="Ikona obrabacieho stroja">
 					</div>
-					<p>
+					<!-- <p>
 						<strong lang-code="01302">Komplexné návrhy</strong>
-					</p>
+					</p> -->
 					<ul class="custom-list">
 						<li lang-code="01303">upínacích prípravkov </li>
 						<li lang-code="01304">montážnych a manipulačných prípravkov</li>
