--- a/Block_EnginInt4.html
+++ b/Block_EnginInt4.html
@@ -36,12 +36,13 @@
 
 				<div class="enginint4-right">
 					<div class="enginint4-line-with-img">
-						<h3 lang-code="01401">Interná konštrukcia</h3>
+						<!-- <h3 lang-code="01401">Interná konštrukcia</h3> -->
+						<strong lang-code="01402">Návrh eskalátorov:</strong>
 						<img src="media/IkonaObrabaciehoStroja.png" alt="Ikona obrabacieho stroja">
 					</div>
-					<p>
+					<!-- <p>
 						<strong lang-code="01402">Návrh eskalátorov:</strong>
-					</p>
+					</p> -->
 					<ul class="custom-list">
 						<li lang-code="01403">tvorba 3D dielov a 2D výkresovej dokumentácie podľa požiadaviek zákazníka</li>
 						<li lang-code="01404">tvorba kusovníkov</li>
