--- a/Block_Ref2.html
+++ b/Block_Ref2.html
@@ -48,31 +48,24 @@
 			<div class="ref2-content-flex">
 				<!-- ************************************************************************ -->
 				<div class="ref2-right">
-					<div class="ref-ovl-grid columns-3">
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+					<div class="ref-tooltip-grid columns-3">
+
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p></p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>interiérové komponenty lietadiel</p>
+									<div class="ref-tooltip-company">AIRBUS</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">AIRBUS</div>
-							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/siemens-logo-enitech.png" alt="SIEMENS logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/siemens-logo-enitech.png" alt="SIEMENS logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software pre letecký a kozmický priemysel </p>
+									<div class="ref-tooltip-company">SIEMENS</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">SIEMENS</div>
-							</div>
 						</div>
 					</div>
 				</div>
