--- a/Block_Ref3.html
+++ b/Block_Ref3.html
@@ -49,8 +49,8 @@
 				<div class="ref3-left">
 					<div class="ref3-left-group ">
 						<img src="media/futuristic-technology-concept.avif" class="ref3-img1" />
-						<img src="media/KonstrukciaOkruhla.png" class="ref3-img2" />
-						<img src="media/KonstrukciaObdlznikova.png" class="ref3-img3" />
+						<!-- <img src="media/KonstrukciaOkruhla.png" class="ref3-img2" />
+						<img src="media/KonstrukciaObdlznikova.png" class="ref3-img3" /> -->
 						<!-- <img src="media/KonstrukciaOkruhla.png" class="ref3-img1" />
 						<img src="media/KonstrukciaObdlznikova.png" class="ref3-img2" /> -->
 					</div>
@@ -61,146 +61,102 @@
 				<!-- ************************************************************************ -->
 				<div class="ref3-right">
 					<div class="ref-ovl-grid columns-3">
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/cat-logo-transp.png" alt="CAT logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">.Realizované služby:</strong></p>
-									<p>strojárstvo</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">CAT</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/cat-logo-transp.png" alt="CAT logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">.Realizované služby:</strong></p>
+								<p>strojárstvo</p>
+								<div class="ref-tooltip-company">CAT</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/daikin-logo-modra.png" alt="DAIKIN logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>klimatizačné jednotky</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">DAIKIN INDUSTRIES</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/daikin-logo-modra.png" alt="DAIKIN logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>klimatizačné jednotky</p>
+								<div class="ref-tooltip-company">DAIKIN INDUSTRIES</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/hestego-logo-enitech.png" alt="HESTEGO logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>plechové komponenty</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">HESTEGO</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/hestego-logo-enitech.png" alt="HESTEGO logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>plechové komponenty</p>
+								<div class="ref-tooltip-company">HESTEGO</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/honeywell-logo-enitech.png" alt="Honeywell logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>turbodúchadlá</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Honeywell</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/honeywell-logo-enitech.png" alt="Honeywell logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>turbodúchadlá</p>
+								<div class="ref-tooltip-company">Honeywell</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/chropynska-logo-transp.png" alt="CHROPYNSKA logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>CAD development design</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Chropynska</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/chropynska-logo-transp.png" alt="CHROPYNSKA logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>CAD development design</p>
+								<div class="ref-tooltip-company">Chropynska</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/konstrukta-logo-enitech.png" alt="Konstrukta logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>výrobné zariadenia pre gumárenský priemysel</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">KONŠTRUKTA</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/konstrukta-logo-enitech.png" alt="Konstrukta logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>výrobné zariadenia pre gumárenský priemysel</p>
+								<div class="ref-tooltip-company">KONŠTRUKTA</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/krauss-maffei-logo-enitech.png" alt="KraussMaffei logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>stroje na výrobu plastových komponentov</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">KraussMaffei</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/krauss-maffei-logo-enitech.png" alt="KraussMaffei logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>stroje na výrobu plastových komponentov</p>
+								<div class="ref-tooltip-company">KraussMaffei</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/mce-logo-transp.png" alt="MCE logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>steel structures and plant engineering</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">MCE part of the family HABAU GROUP</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/mce-logo-transp.png" alt="MCE logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>steel structures and plant engineering</p>
+								<div class="ref-tooltip-company">MCE part of the family HABAU GROUP</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/schindler-logo-enitech.png" alt="Schindler logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">.Realizované služby:</strong></p>
-									<p>výťahy a eskalátory</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Schindler</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/schindler-logo-enitech.png" alt="Schindler logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">.Realizované služby:</strong></p>
+								<p>výťahy a eskalátory</p>
+								<div class="ref-tooltip-company">Schindler</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/skoda-logo-enitech.png" alt="Skoda logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>zváracie a polohovacie prípravky</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Škoda Auto</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/skoda-logo-enitech.png" alt="Skoda logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>zváracie a polohovacie prípravky</p>
+								<div class="ref-tooltip-company">Škoda Auto</div>
 							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/tagueri-logo-transp.png" alt="Tagueri logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
-									<p>Poradenstvo a technológie</p>
-								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Tagueri</div>
+						<div class="ref-tooltip-container">
+							<img src="media/klienti/tagueri-logo-transp.png" alt="Tagueri logo" class="ref-tooltip-image" />
+							<div class="ref-tooltip-text">
+								<p><strong lang-code="07005">Realizované služby:</strong></p>
+								<p>Poradenstvo a technológie</p>
+								<div class="ref-tooltip-company">Tagueri</div>
 							</div>
 						</div>
 					</div>
