--- a/Block_Ref4.html
+++ b/Block_Ref4.html
@@ -49,160 +49,114 @@
 				<!-- ************************************************************************ -->
 				<div class="ref4-right">
 					<div class="ref-ovl-grid columns-3">
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/active-solution-logo-enitech.png" alt="Active Solution logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/active-solution-logo-enitech.png" alt="Active Solution logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>vývoj softwaru pre rôzne oblasti</p>
+								<div class="ref-tooltip-company">Active Solution</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Active Solution</div>
-							</div>
 						</div>
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/agrarmarkt-logo-transp.png" alt="Agrarmarkt logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/agrarmarkt-logo-transp.png" alt="Agrarmarkt logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>Software pre poľnohospodárske odvetvie</p>
+								<div class="ref-tooltip-company">Agrarmarkt</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Agrarmarkt</div>
-							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/atos-logo-enitech.png" alt="Atos logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/atos-logo-enitech.png" alt="Atos logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software pre riadenie výroby mikročipov</p>
+								<div class="ref-tooltip-company">Atos</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Atos</div>
-							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/autodesk-logo-transp.png" alt="Autodesk logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+						<!-- <div class="ref-tooltip-container">
+								<img src="media/klienti/autodesk-logo-transp.png" alt="Autodesk logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>3D modeling software</p>
+								<div class="ref-tooltip-company">Autodesk INVENTOR</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Autodesk INVENTOR</div>
-							</div>
-						</div>
+						</div> -->
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/brz-logo-enitech.png" alt="BRZ logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/brz-logo-enitech.png" alt="BRZ logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>vývoj softwaru pre Rakúsku štátnu správu</p>
+								<div class="ref-tooltip-company">BRZ - Bundesrechenzentrum</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">BRZ - Bundesrechenzentrum</div>
-							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/cellent-logo-transp.png" alt="CELLENT logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/cellent-logo-transp.png" alt="CELLENT logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software v oblasti bankovníctva</p>
+								<div class="ref-tooltip-company">CELLENT</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">CELLENT</div>
-							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/erste-logo-transp.png" alt="Erste logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/erste-logo-transp.png" alt="Erste logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software v oblasti bankovníctva</p>
+								<div class="ref-tooltip-company">Erste</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Erste</div>
-							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/ferchau-logo-transp.png" alt="Ferchau logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/ferchau-logo-transp.png" alt="Ferchau logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software v oblasti strojárenstva</p>
+								<div class="ref-tooltip-company">Ferchau</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Ferchau</div>
-							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/kuka-logo-enitech.png" alt="KUKA logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/kuka-logo-enitech.png" alt="KUKA logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>robotické systémy</p>
+								<div class="ref-tooltip-company">KUKA</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">KUKA</div>
-							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/raiffeisen-bank-logo-enitech.png" alt="Reiffeisen logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/raiffeisen-bank-logo-enitech.png" alt="Reiffeisen logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software v oblasti bankovníctva</p>
+								<div class="ref-tooltip-company">Reiffeisen</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Reiffeisen</div>
-							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/tenovis-logo-transp.png" alt="Tenovis logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/tenovis-logo-transp.png" alt="Tenovis logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software v oblasti telekomunikácií</p>
+								<div class="ref-tooltip-company">Tenovis</div>
 								</div>
-							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Tenovis</div>
-							</div>
 						</div>
 
-						<div class="ref-ovl-item-wrap">
-							<div class="ref-ovl-item">
-								<img src="media/klienti/unisys-logo-transp.png" alt="Unisys logo" class="ref-ovl-image" />
-								<div class="ref-ovl-overlay">
-									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+						<div class="ref-tooltip-container">
+								<img src="media/klienti/unisys-logo-transp.png" alt="Unisys logo" class="ref-tooltip-image" />
+								<div class="ref-tooltip-text">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>Technologické riešenia</p>
+								<div class="ref-tooltip-company">Unisys</div>
 								</div>
 							</div>
-							<div class="ref-ovl-company-item">
-								<div class="ref-ovl-company">Unisys</div>
-							</div>
-						</div>
 					</div>
 					<div style="text-align: right;">
 						<a href="#id_refMenu" lang-code="07020">Hore k menu</a>
